# Remote-sensing

./: .gitignore  DL_Basics1_SimpleMLP.ipynb  HW2_Jun_Youngsang.ipynb  Pipfile  README.md  ROADMAP.md  hurricane_julia_flood_classification.ipynb  ncld_supervised_classification.ipynb  pyproject.toml
HW2_Jun_Youngsang/: HW2_Jun_Youngsang.ipynb
assignments/: FINAL_PROJECT.md  HW1.md  HW1_Jun_Youngsang.ipynb  HW2.md  HW2_Jun_Youngsang.ipynb  HW3.md  HW4.md  final_project.md
assignments/HW2_Jun_Youngsang/: HW2_Jun_Youngsang.ipynb
assignments/HW2_Jun_Youngsang/HW2_Jun_Export/: RGB_Class_Labels.tif  confusion_matrix.csv  feature_importance.csv  featuretest3_fixed.geojson  predicted_image.tif
assignments/HW2_Jun_Youngsang/HW2_Jun_Import/: featuretest3.geojson
docs/: EXTRAREADING.md  SETUP.md  SYLLABUS.md
misc/: nlcd_supervised_classification.ipynb
week01/: README.md  lab.md  mapping_lst.ipynb
week02/: README.md  lab.ipynb
week03/: README.md  lab.md
week04/: README.md  lab.md  ml_methods.ipynb
week05/: README.md  lab.md  lab1_planetarycomputer.md  lab2_gee.md
week06/: .README.md.kate-swp  DL_Basics1_SimpleMLP.ipynb  README.md
week07/: DL_Basics1_SimpleMLP.ipynb  DL_Basics1_SimpleMLP_v2.ipynb  DL_Basics1_SimpleMLP_v3.ipynb  README.md  lab.ipynb
week08/: DL_Basics1_SimpleMLP_digits+fashion.ipynb  README.md  lab.ipynb
