[tool.poetry]
name = "musa-650-spring-2025"
version = "0.1.0"
description = ""
authors = ["Nissim Lebovits <111617674+nlebovits@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
